@startuml C4_Manage_Vessels_Implementation_View
title C4 – Manage Vessels (Code / Class Implementation View)

skinparam class {
  BackgroundColor HoneyDew
  BorderColor Black
  FontColor Black
}

skinparam package {
  BackgroundColor White
  BorderColor Black
  FontStyle bold
}

package "TodoApi.Controllers.Vessels" {
  class VesselsController {
    -PortContext _context
    +GetVessels()
    +GetVessel(imo)
    +PostVessel(CreateVesselDTO)
    +PutVessel(imo, UpdateVesselDTO)
    +DeleteVessel(imo)
  }
}

package "TodoApi.Models.Vessels" {
  class Vessel {
    +string Imo <<PK>>
    +string Name
    +int VesselTypeId <<FK>>
    +string Operator
    +VesselType VesselType
  }
  
  class VesselType {
    +int Id <<PK>>
    +string Name
    +string Description
  }
  
  class VesselDTO {
    +string Imo
    +string Name
    +VesselTypeDTO VesselType
    +string Operator
  }
  
  class CreateVesselDTO {
    +string Imo
    +string Name
    +int VesselTypeId
    +string Operator
  }
  
  class UpdateVesselDTO {
    +string Name
    +int VesselTypeId
    +string Operator
  }
  
  class VesselMapper {
    +{static} ToDTO(Vessel): VesselDTO
    +{static} ToEntity(CreateVesselDTO): Vessel
    +{static} UpdateEntity(Vessel, UpdateVesselDTO)
    +{static} IsValidImo(string): bool
  }
}

package "TodoApi.Models" {
  class PortContext {
    +DbSet<Vessel> Vessels
    +DbSet<VesselType> VesselTypes
    +SaveChangesAsync()
  }
}

VesselsController --> PortContext
VesselsController --> VesselMapper
VesselMapper --> Vessel
VesselMapper --> VesselDTO
VesselMapper --> CreateVesselDTO
VesselMapper --> UpdateVesselDTO
Vessel --> VesselType

@enduml

